   * the server sends the game id and not only the game name if a player joins
     a game to avoid ambiguity in case of multiple games with the same name
   * show observer team chat messages in the 'Chat Log' window
 * WML engine:
   * now tag [filter_adjacent] is supported in the Standard Unit Filter
   * remove the unused [neighbour_unit_filter] animation filter, now that SUF
   does it for us (and better)
 * graphics:
   * new graphics for the highwayman
   * no more idle animations for units next to an enemy unit
   * new button and slider in preferences to switch unit idle animations on
     and off and set their frequency
 * user interface:
   * In help, for each ability and special weapon topic, display a list of
     hyperlinks to encountered units having this ability/special (bug #9567)
 * miscellaneous and bug fixes
   * various bug fixes and code cleanups
   * in help, the encountered units list is now correctly updated when using
     ":debug" and ":nodebug" commands
   * remove some useless messages from the standard output

Version 1.3.7:
 * Campaigns
   * Son of the Black Eye
     * Fixed bug in 'Saving Inarix' where no user_description is generated for
       Inarix
   * Northern Rebirth
     * Colored portraits for Sister Theta and Ro'Arthian
     * Fixed bug in Anita's death event where Tallin speaks instead of her.
     * Fixed bug in 'Old Friend' where Rakshas' portrait doesn't appear.
     * Balancing and text changes in 'Old Friend'
   * Sceptre of Fire
     * Fixed a crash in the final scenario
   * Under the Burning Suns
     * Fixed invalid side bugs in 'Hunting Trolls'
     * Fixed an invalid terrain bug in 'A Long Night'
     * Fixed the dehydration in 'Across the Harsh Sands'
 * build system
   * Fixed autoconf/automake builds so that --disable-python-install
     will not try to create the default install directory for python
     stuff when it isn't needed. Otherwise if you aren't root, make
     errors out.